tests/src/frontend/expand/invalid/macro_algebraic_body.sk
base class B {
  children =
  | C()
  | D()

  fun f(): void
  | C() -> void
  | D() -> void
  | #T() -> void
}

fun main(): void {
  void
}
